aggiornata la documentazione e modificate leggeremente un paio di rotte
